--- a/client/javascript/modules/sidebar/views/templates/sidebar_template.hbs
+++ b/client/javascript/modules/sidebar/views/templates/sidebar_template.hbs
@@ -2,13 +2,13 @@
   <ul class="sidebar">
     <li id="toggle-sidebar" class="sidebar-main">
       <a href="#">
-        Title
+        Scotty
         <span class="menu-icon glyphicon glyphicon-transfer"></span>
       </a>
     </li>
     <li class="sidebar-title"><span>NAVIGATION</span></li>
   </ul>
-  <div class="sidebar-footer">
+  {{!-- <div class="sidebar-footer">
     <div class="col-xs-4">
       <a href="#" target="_blank">
         Source
@@ -24,5 +24,5 @@
         Help
       </a>
     </div>
-  </div>
+  </div> --}}
 </div>
