--- a/client/javascript/modules/header/views/templates/header_link.hbs
+++ b/client/javascript/modules/header/views/templates/header_link.hbs
@@ -1,7 +1,7 @@
-<div class="row header lead">
-  <div class="col-lg-12">
-    <div class="header-title pull-right">
-      <div class="page">
+<div class='row header lead'>
+  <div class='col-lg-12'>
+    <div class='header-title pull-right'>
+      <div class='page'>
         {{ name }}
       </div>
     </div>
