--- a/client/javascript/modules/sidebar/views/templates/sidebar_link.hbs
+++ b/client/javascript/modules/sidebar/views/templates/sidebar_link.hbs
@@ -1,3 +1,3 @@
-<li class="sidebar-list">
-  <a href="#{{ url }}">{{ name }}<span class="menu-icon fa fa-bookmark"></span></a>
+<li class='sidebar-list'>
+  <a href='#{{ url }}'>{{ name }}<span class='menu-icon fa fa-bookmark'></span></a>
 </li>
