--- a/client/javascript/modules/sidebar/views/templates/sidebar_template.hbs
+++ b/client/javascript/modules/sidebar/views/templates/sidebar_template.hbs
@@ -1,26 +1,26 @@
-<div id="sidebar-wrapper">
-  <ul class="sidebar">
-    <li id="toggle-sidebar" class="sidebar-main">
-      <a href="#">
+<div id='sidebar-wrapper'>
+  <ul class='sidebar'>
+    <li id='toggle-sidebar' class='sidebar-main'>
+      <a href='#'>
         Title
-        <span class="menu-icon glyphicon glyphicon-transfer"></span>
+        <span class='menu-icon glyphicon glyphicon-transfer'></span>
       </a>
     </li>
-    <li class="sidebar-title"><span>NAVIGATION</span></li>
+    <li class='sidebar-title'><span>NAVIGATION</span></li>
   </ul>
-  <div class="sidebar-footer">
-    <div class="col-xs-4">
-      <a href="#" target="_blank">
+  <div class='sidebar-footer'>
+    <div class='col-xs-4'>
+      <a href='#' target='_blank'>
         Source
       </a>
     </div>
-    <div class="col-xs-4">
-      <a href="#" target="_blank">
+    <div class='col-xs-4'>
+      <a href='#' target='_blank'>
         Bugs
       </a>
     </div>
-    <div class="col-xs-4">
-      <a href="#">
+    <div class='col-xs-4'>
+      <a href='#'>
         Help
       </a>
     </div>
