--- a/client/javascript/modules/sidebar/views/templates/sidebar_template.hbs
+++ b/client/javascript/modules/sidebar/views/templates/sidebar_template.hbs
@@ -8,21 +8,21 @@
     </li>
     <li class='sidebar-title'><span>NAVIGATION</span></li>
   </ul>
-  <div class='sidebar-footer'>
-    <div class='col-xs-4'>
-      <a href='#' target='_blank'>
-        Source
-      </a>
-    </div>
-    <div class='col-xs-4'>
-      <a href='#' target='_blank'>
-        Bugs
-      </a>
-    </div>
-    <div class='col-xs-4'>
-      <a href='#'>
-        Help
-      </a>
-    </div>
-  </div>
+  <!--<div class='sidebar-footer'>-->
+    <!--<div class='col-xs-4'>-->
+      <!--<a href='#' target='_blank'>-->
+        <!--Source-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class='col-xs-4'>-->
+      <!--<a href='#' target='_blank'>-->
+        <!--Bugs-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div class='col-xs-4'>-->
+      <!--<a href='#'>-->
+        <!--Help-->
+      <!--</a>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
