--- a/client/javascript/modules/main/rosters/views/templates/roster_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/roster_template.hbs
@@ -1,2 +1,2 @@
 <p class="first-name">{{firstName}}</p><p>{{lastName}}</p>
-<p class="title">{{department}} / {{title}}</p>
+<p class="title"><span class="department">{{department}} /</span> {{title}}</p>
