--- a/client/less/app.less
+++ b/client/less/app.less
@@ -1,6 +1,6 @@
 @import '../bower_components/bootstrap.css';
 @import '../bower_components/font-awesome.css';
-
+@import '../bower_components/select2.css';
 @import './slate_variables.less';
 
 @import './main.less';
