--- a/client/javascript/modules/main/rosters/views/templates/filter_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/filter_template.hbs
@@ -1,17 +1,30 @@
-<div class="row">
-    <div class="col-md-4" style="text-align: right">
-       {{./key}}
-    </div>
-    <div class="col-md-8">
-        <select class="x-select">
-            <option value="all">all</option>
-            {{#each values}}
-                <option value=".{{../key}}-{{value}}">{{displayValue}}</option>
-            {{/each}}
-        </select>
-    </div>
-</div>
+<!--<div class="row">-->
+    <!--<div class="col-md-4" style="text-align: right">-->
+       <!--{{./key}}-->
+    <!--</div>-->
+    <!--<div class="col-md-8">-->
+        <!--<select class="x-select">-->
+            <!--<option value="all">all</option>-->
+            <!--{{#each values}}-->
+                <!--<option value=".{{../key}}-{{value}}">{{displayValue}}</option>-->
+            <!--{{/each}}-->
+        <!--</select>-->
+    <!--</div>-->
+<!--</div>-->
+<hr>
+<!-- Buttons -->
+<h4>{{key}}</h4>
+{{#if useDropbox}}
+    <select class="x-select" style="width:400px;">
+        <option value="all">all</option>
+        {{#each values}}
+            <option value=".{{../key}}-{{value}}">{{displayValue}}</option>
+        {{/each}}
+    </select>
+{{else}}
+    {{#each values}}
+        <div class="btn btn-default filter {{../key}}-{{value}}" data-filter=".{{../key}}-{{value}}">{{displayValue}}</div>
+    {{/each}}
+{{/if}}
 
-<!--{{#each values}}-->
-<!--<div class="btn btn-default filter {{../key}}-{{value}}" data-filter=".{{../key}}-{{value}}">{{displayValue}}</div>-->
-<!--{{/each}}-->
+
