--- a/client/javascript/modules/main/rosters/views/templates/filters_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/filters_template.hbs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12 filters">
         Filters:
-        <!--<div class="btn btn-default filter" data-filter="all">All</div>-->
+        <div class="btn btn-default filter" data-filter="all">Show all</div>
         <div class="x-container"></div>
     </div>
 </div>
