add thumbnail photo

--- a/client/javascript/modules/main/rosters/views/templates/roster_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/roster_template.hbs
@@ -1,2 +1,3 @@
+<div class="thumbnail" style="background-image:url(data:image/gif;base64,{{thumbnailPhoto}});"></div>
 <p class="first-name">{{firstName}}</p><p>{{lastName}}</p>
 <p class="title"><span class="department">{{department}} /</span> {{title}}</p>
