--- a/client/less/main.less
+++ b/client/less/main.less
@@ -131,6 +131,15 @@ div.input-mask {
     text-align: center;
   }
 
+  .thumbnail {
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-origin: content-box;
+    background-size: 100% auto;
+  }
+
   .first-name {
     font-size: 20px;
     color: #333;
