added new fields and sort

--- a/client/javascript/modules/main/rosters/views/templates/filters_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/filters_template.hbs
@@ -1,7 +1,15 @@
 <div class="row">
-    <div class="col-md-12 filters">
-        Filters:
-        <div class="btn btn-default filter" data-filter="all">Show all</div>
+    <div class="col-md-3">
+        <h4>Sort by date created:</h4>
+    </div>
+    <div class="col-md-9">
+        <a class="btn btn-default sort" data-sort="whencreated:asc">Ascending</a>
+        <a class="btn btn-default sort" data-sort="whencreated:desc">Descending</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <h4>Filters:</h4>
         <div class="x-container"></div>
     </div>
 </div>
