--- a/client/javascript/modules/main/rosters/views/templates/filter_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/filter_template.hbs
@@ -1,30 +1,22 @@
-<!--<div class="row">-->
-    <!--<div class="col-md-4" style="text-align: right">-->
-       <!--{{./key}}-->
-    <!--</div>-->
-    <!--<div class="col-md-8">-->
-        <!--<select class="x-select">-->
-            <!--<option value="all">all</option>-->
-            <!--{{#each values}}-->
-                <!--<option value=".{{../key}}-{{value}}">{{displayValue}}</option>-->
-            <!--{{/each}}-->
-        <!--</select>-->
-    <!--</div>-->
-<!--</div>-->
-<hr>
-<!-- Buttons -->
-<h4>{{key}}</h4>
-{{#if useDropbox}}
-    <select class="x-select" style="width:400px;">
-        <option value="all">all</option>
-        {{#each values}}
-            <option value=".{{../key}}-{{value}}">{{displayValue}}</option>
-        {{/each}}
-    </select>
-{{else}}
-    {{#each values}}
-        <div class="btn btn-default filter {{../key}}-{{value}}" data-filter=".{{../key}}-{{value}}">{{displayValue}}</div>
-    {{/each}}
-{{/if}}
+<div class="row">
+    <div class="col-md-3">
+        <h5 style="text-align: right;">{{key}}</h5>
+    </div>
+    <div class="col-md-9">
+        {{#if useDropdown}}
+            <select class="x-select" style="width:400px;">
+                <option value="all">all</option>
+                {{#each values}}
+                    <option value=".{{../key}}-{{value}}">{{displayValue}}</option>
+                {{/each}}
+            </select>
+        {{else}}
+            <div class="btn btn-default filter" data-filter="all">Show all</div>
+            {{#each values}}
+                <div class="btn btn-default filter {{../key}}-{{value}}" data-filter=".{{../key}}-{{value}}">{{displayValue}}</div>
+            {{/each}}
+        {{/if}}
+    </div>
+</div>
 
 
