--- a/client/javascript/modules/main/rosters/views/templates/roster_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/roster_template.hbs
@@ -1,3 +1,7 @@
-<div class="thumbnail" style="background-image:url(data:image/gif;base64,{{thumbnailPhoto}});"></div>
+{{#if thumbnailPhoto}}
+    <div class="thumbnail" style="background-image:url(data:image/gif;base64,{{thumbnailPhoto}});"></div>
+{{else}}
+    <div class="thumbnail" style="background-image:url(/images/profileNotFound.jpg);"></div>
+{{/if}}
 <p class="first-name">{{firstName}}</p><p>{{lastName}}</p>
 <p class="title"><span class="department">{{department}} /</span> {{title}}</p>
