added detail and routing

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -90,6 +90,15 @@ div.input-mask {
     padding-top: 7px;
 }
 
+a {cursor: pointer;}
+
+.profile {
+  height: 350px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-origin: content-box;
+  background-size: 100% auto;
+}
 
 .roster-list{
   padding: 2% 2% 0;
@@ -117,6 +126,7 @@ div.input-mask {
   vertical-align: top;
   display: none;
   position: relative;
+  cursor: pointer;
 
   &::before {
     border-radius: 20px;
@@ -154,6 +164,10 @@ div.input-mask {
     color: #111;
     font-weight: bold;
   }
+}
+
+.report-list .item {
+  display: inline-block;
 }
 
 .roster-list {
