--- a/client/javascript/modules/main/rosters/views/templates/filters_template.hbs
+++ b/client/javascript/modules/main/rosters/views/templates/filters_template.hbs
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <h4>Filters:</h4>
+        <h4>Filters: <small>You can only apply one filter at a time.</small></h4>
         <div class="x-container"></div>
     </div>
 </div>
