refactor (+1 squashed commit) Squashed commits: [c14ef6b] more stuffs

--- a/client/javascript/modules/main/levels/views/templates/level_template.hbs
+++ b/client/javascript/modules/main/levels/views/templates/level_template.hbs
@@ -1,4 +1,9 @@
 <li class="level-list">
-  {{level}}: {{#if expRequiredToLevel}}{{expRequiredToLevel}}{{else}}CAP{{/if}}
+  {{level}}:
+    {{#if expRequiredToLevel}}
+        {{expRequiredToLevel}}
+    {{else}}
+        CAP
+    {{/if}}
     <br><br><br><hr><br><br><br>
 </li>
